--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -13,10 +13,10 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-}
 
-.backdrop.is-hidden .modal {
-    transform: translate(-100%, -50%)  rotate(180deg)  ;
+    & .modal {
+        transform: translate(-100%, -50%)  rotate(180deg)  ;
+    }
 }
 
 .form-title {
@@ -60,34 +60,31 @@
     border-radius: 50%;
     border: 1px solid $btn-close-border;
     background-color: $transparent-background;
+
+    &:hover .icon-close, 
+    &:focus .icon-close {
+        fill: $accent;  
+}
 }
 
 .icon-close {
     fill: currentColor;
 }
 
-.button-close:hover .icon-close, 
-.button-close:focus .icon-close {
-    fill: $accent;  
-}
-
 .modal-form-field {
     display: flex;
     flex-direction: column;
     position: relative;
-    /* outline: 1px solid red ; */
-}
 
-.modal-form-field:not(:last-child){
-    margin-bottom: 10px;
-}
-
-.modal-form-field:nth-child(5) {
-    margin-bottom: 20px;
-}
-
-.modal-form-field:nth-child(6) {
-    margin-bottom: 30px;
+    &:not(:last-child){
+        margin-bottom: 10px;
+    }
+    &:nth-child(5) {
+        margin-bottom: 20px;
+    }
+    &:nth-child(6) {
+        margin-bottom: 30px;
+    }
 }
 
 .modal-form-field label {
@@ -97,11 +94,13 @@
     line-height: 1.167;
     letter-spacing: 0.01em;
     color: $add-text-color;
+
+    & label:last-child {
+        margin-bottom: 0;
+    }
 }
 
-.modal-form-field label:last-child {
-    margin-bottom: 0;
-}
+
 
 .modal-form-field input,
 .modal-form-field textarea{     
@@ -118,7 +117,7 @@
     padding-left: 42px;
 }
 
- .form-icon {
+.form-icon {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -129,32 +128,28 @@
     padding: 12px 12px;
     line-height: 1.167;
     transition: border-color var(--transition-time) var(--transition-cubic);
+
+    &::placeholder {
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+        color: $placeholder-color;
+    }
+
+    &:hover,
+    &:focus{
+        border-color: $accent;
+        outline: none;
+    }
+    &:hover + .form-icon,
+    &:focus + .form-icon {
+        fill: $accent;
+    }
 }               
 
 .form-input + .form-icon {
     transition: fill var(--transition-time) var(--transition-cubic);
 }
-
-.form-input::placeholder {
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: $placeholder-color;
-}
-
-
-.form-input:hover,
-.form-input:focus{
-    border-color: $accent;
-    outline: none;
-}
-
-.form-input:hover + .form-icon,
-.form-input:focus + .form-icon {
-    fill: $accent;
-}
-
-
 
 .modal-form-field textarea {
     padding: 12px 16px;
@@ -183,11 +178,11 @@
     margin-right: 8px;
     border-radius: 2px;
     align-items: center;
-}
 
-.checkbox-icon svg {
-    opacity: 0;
-    transition: opacity $transition-time $transition-cubic;
+    & svg {
+        opacity: 0;
+        transition: opacity $transition-time $transition-cubic;
+    }
 }
 
 .policy-checkbox:checked + .policy-label > span svg {
@@ -220,12 +215,14 @@
     color: $accent;
 }
 
-.hero-btn[type="submit"] {
+.main-btn[type="submit"] {
     display: block;
     margin: 0 auto;
     padding: 10px 52px;
+
+    &:hover {
+        box-shadow: $hero-sahdow-btn;
+    }
 }
 
-.hero-btn[type="submit"]:hover {
-    box-shadow: $hero-sahdow-btn;
-}
+
