--- a/sass/layouts/_works.scss
+++ b/sass/layouts/_works.scss
@@ -7,12 +7,10 @@
 }
 .work-list {
     display: flex;
-}
 
-
-
-.work-list .work-item:not(:last-child) {
-    margin-right: 30px;
+    & .work-item:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 
 .work-item {
