--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "./components/section";
 @import "./components/page-header";
 @import "./components/logo";
+@import "./components/title";
+@import "./components/main-btn";
 @import "./components/social-links";
 @import "./components/page-footer";
 @import "./components/_subscribe-form";
@@ -19,16 +21,8 @@
 @import "./layouts/team";
 @import "./layouts/clients";
 @import "./layouts/modal";
+@import "./layouts/projects";
 
 
 
 
-/* МОДАЛЬНЕ ВІКНО */
-
-/* Портфоліо */
-
-/* Фільтр */
-
-
-
-/* Проекти */
