--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -35,3 +35,4 @@ $btn-close-border: rgba(0, 0, 0, 0.1);
 $hero-sahdow-btn: 0px 4px 4px rgba(0, 0, 0, 0.15);
 $check-box-color: rgba(33, 33, 33, 1);
 $placeholder-color: rgba(117, 117, 117, 0.5);
+$subscribe-border-color: rgba(255, 255, 255, 0.3);
