--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -13,21 +13,23 @@
     transition: color $transition-time $transition-cubic,
                 box-shadow $transition-time $transition-cubic,
                 background-color $transition-time $transition-cubic;
-}
-
-.filter-btn:hover,
-.filter-btn:focus {
+    &:hover,
+    &:focus {
     color: $white-color;
     background-color: $accent;
     box-shadow: $filter-shadow-color;             
 }
+}
+
+
 
 .filter-list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+
+    & .item:not(:last-child) {
+        margin-right: 8px;
+    }
 }
 
-.filter-list .item:not(:last-child) {
-    margin-right: 8px;
-}
