--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -30,6 +30,10 @@
 .address-list {
     font-style: normal;
 
+    & >.item:not(:last-child) {
+        margin-bottom: 12px;
+    }
+
 }
 
 .address-list .footer-contact,
@@ -38,27 +42,26 @@
     line-height: 1.71;
 }
 
-.address-list >.item:not(:last-child) {
-    margin-bottom: 12px;
-}
-
 .address-item {
     color: $white-color;
 
     transition: color $transition-time $transition-cubic;
+
+    &:hover,
+    &:focus {
+        color: $accent;
+    }
 }
 
 .footer-contact {
     color: $footer-contact-color;
 
     transition: color $transition-time $transition-cubic;
-}
 
-.address-item:hover,
-.address-item:focus,
-.footer-contact:hover,
-.footer-contact:focus {
+    &:hover,
+    &:focus {
     color: $accent;
+}
 }
 
 .adress-container {
@@ -89,12 +92,14 @@
     background-color: $background-footer-link;
 
     transition: background-color $transition-time $transition-cubic;
-}
 
-.footer-link:hover,
-.footer-link:focus {
+    &:hover,
+    &:focus {
     background-color: $accent;
 }
+}
+
+
 
 
 .footer-icon {
