--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -11,43 +11,27 @@
 
     color: $white-color;
     background-color: $transparent-background;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid $subscribe-border-color;
     border-radius: 4px;
     transition: border-color $transition-time $transition-cubic;
     outline: none;
+
+    &::placeholder {
+        font-size: 16px;
+        line-height: 1.25;
+        color: $footer-contact-color;
+    }
+    &:focus {
+        border-color: $accent;
+    }
 }
 
-.form-field input::placeholder {
-    font-size: 16px;
-    line-height: 1.25;
-    color: rgba(255, 255, 255, 0.6);
-
-
-}
-
-.form-field input:focus {
-
-    border-color: $accent;
-}
-
-.subscribe-btn {
+.main-btn.subscribe-btn[type="submit"] {
     display: inline-flex;
     align-items: center;
     
 
-    width: 200px;
-    height: 50px;
-    padding: 10px 28px;
-    
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    
-
-    color: $white-color;
-    background-color: $accent;
-    border-radius: 4px;
+    padding: 10px 28px;   
 }
 
 .icon-subscribe {
