--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -8,10 +8,10 @@
 
 .features-item {
     width: 270px;
-}
 
-.features-item:not(:last-child) {
-    margin-right: 30px;
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 
 .icon-container {
